Agregando la clase Carrito y funcionalidad

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <div class="modal-contenido">
             <span class="cerrar">X</span>
             <p>Algun texto en el modal..</p>
+            <div id="cart_container">
+                                    
+            </div>
         </div>
     </div>
 
