mejorando el modal

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="myModal" class="modal">
         <!-- Contenido del modal -->
         <div class="modal-contenido">
-            <span class="cerrar">X</span>            
+            <span class="cerrar"></span>            
             <div id="cart_container">
                                     
             </div>
