Agregando descripción a las películas y ajustado con JS la selección de la película

--- a/index.html
+++ b/index.html
@@ -21,34 +21,32 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Cartelera</a></li>
                 <li><a href="#">Sucursales</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
         <div class="cart">
-            <button id="myBtn"><img src="./public/tickets.png" alt="tickets"></button>                        
+            <button id="myBtn"><img src="./public/tickets.png" alt="tickets"></button>
             <span>2</span>
         </div>
     </header>
 
     <main>
+        <h2 class="caterlera">EN CARTELERA</h2>
         <section id="products_container">
-
-
+            <!-- Contenido app -->
         </section>
-
     </main>
 
-    <!-- Modal -->    
-    
+    <!-- Modal -->
+
     <div id="myModal" class="modal">
         <!-- Contenido del modal -->
         <div class="modal-contenido">
-            <span class="cerrar"></span>            
+            <span class="cerrar"></span>
             <div id="cart_container">
-                                    
+                <!-- Contenido app -->
             </div>
         </div>
     </div>
@@ -79,7 +77,7 @@
                     <i class="fa-brands fa-square-facebook"></i>
                 </div>
             </div>
-        </div>        
+        </div>
     </footer>
 
 
