Dando funcionalidad a las card con el modal al seleccionarlas

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             </ul>
         </nav>
         <div class="cart">
-            <button id="myBtn"><img src="./public/tickets.png" alt="tickets"></button>
-            <span>2</span>
+            <div class="tickets">
+                <p>Tickets</p>
+                <button id="myBtn"><img src="./public/tickets.png" alt="tickets"></button>
+            </div>
         </div>
     </header>
 
@@ -50,10 +52,6 @@
             </div>
         </div>
     </div>
-
-
-
-
 
     <footer>
         <div class="footer-container">
