Ajustando funcionalidad del carrito (tickets) cuando está vacío

--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
     <!-- Modal -->
 
     <div id="myModal" class="modal">
+        
         <!-- Contenido del modal -->
         <div class="modal-contenido">
-            <span class="cerrar"></span>
+            <div class="conteiner-img">
+                <img class="img-cart" src="./public/Logo-cinecolombia.webp" alt="Logo-cinecolombia">                           
+            </div>                    
+            
             <div id="cart_container">
-                <!-- Contenido app -->
+                <!-- Contenido de la película seleccionada o mensaje -->                
             </div>
+            <p class="cerrar">Bienvenido! para iniciar elige una película</p>
         </div>
     </div>
 
