Ajustando los metodos guardarEnStorage y recuperarStorage.

--- a/index.html
+++ b/index.html
@@ -46,15 +46,11 @@
     <div id="myModal" class="modal">
         
         <!-- Contenido del modal -->
-        <div class="modal-contenido">
-            <div class="conteiner-img">
-                <img class="img-cart" src="./public/Logo-cinecolombia.webp" alt="Logo-cinecolombia">                           
-            </div>                    
-            
+        <div class="modal-contenido">           
             <div id="cart_container">
                 <!-- Contenido de la película seleccionada o mensaje -->                
             </div>
-            <p class="cerrar">Bienvenido! para iniciar elige una película</p>
+            <p class="cerrar"></p>
         </div>
     </div>
 
